eks-kubernetes-masterclass/section-12-albic-basic-ingress-demo/hello-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello
        image: hashicorp/http-echo:latest
        args:
        - "-text=Hello from pod: $(HOSTNAME)"
        - "-listen=:8080"
        ports:
        - containerPort: 8080
