eks-kubernetes-masterclass/section-12-albic-basic-ingress-demo/hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
spec:
  type: NodePort
  selector:
    app: hello
  ports:
  - port: 80
    targetPort: 8080
